<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTodoActivity">

    <TextView
        android:id="@+id/tdlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tdlabel"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="Title:"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="372dp"
        android:layout_height="41dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editT_titlle"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textV_t"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textV_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:text="Text:"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnUi"
        android:layout_width="367dp"
        android:layout_height="41dp"
        android:layout_marginStart="21dp"
        android:layout_marginLeft="21dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="16dp"
        android:text="@string/btnUi"
        app:layout_constraintBottom_toTopOf="@+id/btnS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnS"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginLeft="155dp"
        android:layout_marginEnd="155dp"
        android:layout_marginRight="155dp"
        android:layout_marginBottom="32dp"
        android:background="#F3246B"
        android:text="@string/btnS"
        android:textColor="#EEFCF2"
        android:textColorHighlight="#C5E9CF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="364dp"
        android:layout_height="1dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="16dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toTopOf="@+id/cb_complete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cb_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/cb_complete"
        app:layout_constraintBottom_toTopOf="@+id/btnUi"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="196dp"
        android:background="@null"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Contents"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>